feat: create User from DOT
